--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -12,17 +12,26 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment this line below to add rgb underglow / backlight support
-CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
 
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_IDLE_TIMEOUT=60000
-CONFIG_ZMK_SLEEP=n
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+CONFIG_ZMK_SLEEP=y
+# from ergonaut
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# from ergonaut
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=1800
 CONFIG_ZMK_PM_SOFT_OFF=y
+
+# from ergonaut
+CONFIG_ZMK_USB=y
+# from ergonaut
+CONFIG_ZMK_BLE=y
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
